parser_module/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     program -> error
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> statement
Rule 5     statement_list -> statement_list error EOL
Rule 6     statement -> declaration_stmt
Rule 7     statement -> assignment_stmt
Rule 8     statement -> function_call_stmt
Rule 9     statement -> if_stmt
Rule 10    statement -> while_stmt
Rule 11    statement -> return_stmt
Rule 12    statement -> function_def_stmt
Rule 13    statement -> break_stmt
Rule 14    statement -> continue_stmt
Rule 15    statement -> foreach_stmt
Rule 16    statement -> until_stmt
Rule 17    statement -> then_stmt
Rule 18    statement -> builtin_function_stmt
Rule 19    builtin_function_stmt -> BOOK LPAREN arg_list RPAREN EOL
Rule 20    builtin_function_stmt -> CANCEL LPAREN arg_list RPAREN EOL
Rule 21    builtin_function_stmt -> LIST_EVENTS LPAREN arg_list RPAREN EOL
Rule 22    builtin_function_stmt -> CHECK_AVAILABILITY LPAREN arg_list RPAREN EOL
Rule 23    builtin_function_stmt -> MAKE_PAYMENT LPAREN arg_list RPAREN EOL
Rule 24    builtin_function_stmt -> REG LPAREN arg_list RPAREN EOL
Rule 25    builtin_function_stmt -> DISPLAY LPAREN arg_list RPAREN EOL
Rule 26    builtin_function_stmt -> ACCEPT LPAREN arg_list RPAREN EOL
Rule 27    builtin_function_stmt -> BOOK LPAREN error RPAREN EOL
Rule 28    builtin_function_stmt -> CANCEL LPAREN error RPAREN EOL
Rule 29    builtin_function_stmt -> LIST_EVENTS LPAREN error RPAREN EOL
Rule 30    builtin_function_stmt -> CHECK_AVAILABILITY LPAREN error RPAREN EOL
Rule 31    builtin_function_stmt -> MAKE_PAYMENT LPAREN error RPAREN EOL
Rule 32    builtin_function_stmt -> REG LPAREN error RPAREN EOL
Rule 33    builtin_function_stmt -> DISPLAY LPAREN error RPAREN EOL
Rule 34    builtin_function_stmt -> ACCEPT LPAREN error RPAREN EOL
Rule 35    builtin_function_call -> BOOK LPAREN arg_list RPAREN
Rule 36    builtin_function_call -> CANCEL LPAREN arg_list RPAREN
Rule 37    builtin_function_call -> LIST_EVENTS LPAREN arg_list RPAREN
Rule 38    builtin_function_call -> CHECK_AVAILABILITY LPAREN arg_list RPAREN
Rule 39    builtin_function_call -> MAKE_PAYMENT LPAREN arg_list RPAREN
Rule 40    builtin_function_call -> REG LPAREN arg_list RPAREN
Rule 41    builtin_function_call -> DISPLAY LPAREN arg_list RPAREN
Rule 42    builtin_function_call -> ACCEPT LPAREN arg_list RPAREN
Rule 43    builtin_function_call -> BOOK LPAREN error RPAREN
Rule 44    builtin_function_call -> CANCEL LPAREN error RPAREN
Rule 45    builtin_function_call -> LIST_EVENTS LPAREN error RPAREN
Rule 46    builtin_function_call -> CHECK_AVAILABILITY LPAREN error RPAREN
Rule 47    builtin_function_call -> MAKE_PAYMENT LPAREN error RPAREN
Rule 48    builtin_function_call -> REG LPAREN error RPAREN
Rule 49    builtin_function_call -> DISPLAY LPAREN error RPAREN
Rule 50    builtin_function_call -> ACCEPT LPAREN error RPAREN
Rule 51    declaration_stmt -> type_specifier IDENTIFIER EQUALS expression EOL
Rule 52    declaration_stmt -> type_specifier IDENTIFIER EQUALS function_call EOL
Rule 53    declaration_stmt -> type_specifier IDENTIFIER EQUALS builtin_function_call EOL
Rule 54    declaration_stmt -> type_specifier IDENTIFIER EQUALS error EOL
Rule 55    type_specifier -> INT_TYPE
Rule 56    type_specifier -> FLOAT_TYPE
Rule 57    type_specifier -> STRING_TYPE
Rule 58    type_specifier -> BOOL_TYPE
Rule 59    type_specifier -> DATE_TYPE
Rule 60    type_specifier -> TIME_TYPE
Rule 61    type_specifier -> VOID
Rule 62    assignment_stmt -> IDENTIFIER EQUALS expression EOL
Rule 63    assignment_stmt -> IDENTIFIER EQUALS function_call EOL
Rule 64    assignment_stmt -> IDENTIFIER EQUALS builtin_function_call EOL
Rule 65    assignment_stmt -> IDENTIFIER EQUALS error EOL
Rule 66    function_call_stmt -> function_call EOL
Rule 67    function_call_stmt -> builtin_function_call EOL
Rule 68    function_call -> IDENTIFIER LPAREN arg_list RPAREN
Rule 69    function_call -> IDENTIFIER LPAREN error RPAREN
Rule 70    arg_list -> arg_list COMMA expression
Rule 71    arg_list -> expression
Rule 72    arg_list -> empty
Rule 73    arg_list -> arg_list COMMA error
Rule 74    arg_list -> error
Rule 75    if_stmt -> IF LPAREN expression RPAREN block_stmt
Rule 76    if_stmt -> IF LPAREN expression RPAREN block_stmt ELSE block_stmt
Rule 77    if_stmt -> IF LPAREN error RPAREN block_stmt
Rule 78    if_stmt -> IF LPAREN error RPAREN block_stmt ELSE block_stmt
Rule 79    if_stmt -> IF LPAREN expression RPAREN error
Rule 80    if_stmt -> IF LPAREN expression RPAREN error ELSE block_stmt
Rule 81    if_stmt -> IF LPAREN expression RPAREN block_stmt ELSE error
Rule 82    while_stmt -> WHILE LPAREN expression RPAREN block_stmt
Rule 83    while_stmt -> WHILE LPAREN error RPAREN block_stmt
Rule 84    while_stmt -> WHILE LPAREN expression RPAREN error
Rule 85    block_stmt -> LBRACKET statement_list RBRACKET
Rule 86    block_stmt -> LBRACKET error RBRACKET
Rule 87    return_stmt -> RETURN expression EOL
Rule 88    return_stmt -> RETURN error EOL
Rule 89    expression -> expression PLUS expression
Rule 90    expression -> expression MINUS expression
Rule 91    expression -> expression TIMES expression
Rule 92    expression -> expression DIVIDE expression
Rule 93    expression -> expression LT expression
Rule 94    expression -> expression LE expression
Rule 95    expression -> expression GT expression
Rule 96    expression -> expression GE expression
Rule 97    expression -> expression EQ expression
Rule 98    expression -> expression NEQ expression
Rule 99    expression -> expression AND expression
Rule 100   expression -> expression OR expression
Rule 101   expression -> NOT expression
Rule 102   expression -> LPAREN expression RPAREN
Rule 103   expression -> LPAREN error RPAREN
Rule 104   expression -> NUMBER
Rule 105   expression -> FLOAT_NUM
Rule 106   expression -> STRING_LITERAL
Rule 107   expression -> BOOLEAN_VAL
Rule 108   expression -> DATE_VAL
Rule 109   expression -> TIME_VAL
Rule 110   expression -> IDENTIFIER
Rule 111   expression -> function_call
Rule 112   expression -> builtin_function_call
Rule 113   break_stmt -> BREAK EOL
Rule 114   continue_stmt -> CONTINUE EOL
Rule 115   function_def_stmt -> FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN block_stmt
Rule 116   function_def_stmt -> FUNCTION type_specifier IDENTIFIER LPAREN error RPAREN block_stmt
Rule 117   function_def_stmt -> FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN error
Rule 118   param_list -> param_list COMMA param
Rule 119   param_list -> param
Rule 120   param_list -> empty
Rule 121   param_list -> param_list COMMA error
Rule 122   param_list -> error
Rule 123   param -> type_specifier IDENTIFIER
Rule 124   foreach_stmt -> FOREACH LPAREN IDENTIFIER IN expression RPAREN block_stmt
Rule 125   foreach_stmt -> FOREACH LPAREN error RPAREN block_stmt
Rule 126   foreach_stmt -> FOREACH LPAREN IDENTIFIER IN expression RPAREN error
Rule 127   until_stmt -> UNTIL LPAREN expression RPAREN block_stmt
Rule 128   until_stmt -> UNTIL LPAREN error RPAREN block_stmt
Rule 129   until_stmt -> UNTIL LPAREN expression RPAREN error
Rule 130   then_stmt -> THEN block_stmt
Rule 131   then_stmt -> THEN error
Rule 132   empty -> <empty>

Terminals, with rules where they appear

ACCEPT               : 26 34 42 50
AND                  : 99
BOOK                 : 19 27 35 43
BOOLEAN_VAL          : 107
BOOL_TYPE            : 58
BREAK                : 113
CANCEL               : 20 28 36 44
CHECK_AVAILABILITY   : 22 30 38 46
COLON                : 
COMMA                : 70 73 118 121
CONTINUE             : 114
DATE_TYPE            : 59
DATE_VAL             : 108
DISPLAY              : 25 33 41 49
DIVIDE               : 92
ELSE                 : 76 78 80 81
EOL                  : 5 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 51 52 53 54 62 63 64 65 66 67 87 88 113 114
EQ                   : 97
EQUALS               : 51 52 53 54 62 63 64 65
FLOAT_NUM            : 105
FLOAT_TYPE           : 56
FOREACH              : 124 125 126
FUNCTION             : 115 116 117
GE                   : 96
GT                   : 95
IDENTIFIER           : 51 52 53 54 62 63 64 65 68 69 110 115 116 117 123 124 126
IF                   : 75 76 77 78 79 80 81
IN                   : 124 126
INT_TYPE             : 55
LBRACKET             : 85 86
LE                   : 94
LIST_EVENTS          : 21 29 37 45
LPAREN               : 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 68 69 75 76 77 78 79 80 81 82 83 84 102 103 115 116 117 124 125 126 127 128 129
LT                   : 93
MAKE_PAYMENT         : 23 31 39 47
MINUS                : 90
NEQ                  : 98
NOT                  : 101
NUMBER               : 104
OR                   : 100
PLUS                 : 89
RBRACKET             : 85 86
REG                  : 24 32 40 48
RETURN               : 87 88
RPAREN               : 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 68 69 75 76 77 78 79 80 81 82 83 84 102 103 115 116 117 124 125 126 127 128 129
STRING_LITERAL       : 106
STRING_TYPE          : 57
THEN                 : 130 131
TIMES                : 91
TIME_TYPE            : 60
TIME_VAL             : 109
UNTIL                : 127 128 129
VOID                 : 61
WHILE                : 82 83 84
error                : 2 5 27 28 29 30 31 32 33 34 43 44 45 46 47 48 49 50 54 65 69 73 74 77 78 79 80 81 83 84 86 88 103 116 117 121 122 125 126 128 129 131

Nonterminals, with rules where they appear

arg_list             : 19 20 21 22 23 24 25 26 35 36 37 38 39 40 41 42 68 70 73
assignment_stmt      : 7
block_stmt           : 75 76 76 77 78 78 80 81 82 83 115 116 124 125 127 128 130
break_stmt           : 13
builtin_function_call : 53 64 67 112
builtin_function_stmt : 18
continue_stmt        : 14
declaration_stmt     : 6
empty                : 72 120
expression           : 51 62 70 71 75 76 79 80 81 82 84 87 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 102 124 126 127 129
foreach_stmt         : 15
function_call        : 52 63 66 111
function_call_stmt   : 8
function_def_stmt    : 12
if_stmt              : 9
param                : 118 119
param_list           : 115 117 118 121
program              : 0
return_stmt          : 11
statement            : 3 4
statement_list       : 1 3 5 85
then_stmt            : 17
type_specifier       : 51 52 53 54 115 116 117 123
until_stmt           : 16
while_stmt           : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) program -> . error
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (5) statement_list -> . statement_list error EOL
    (6) statement -> . declaration_stmt
    (7) statement -> . assignment_stmt
    (8) statement -> . function_call_stmt
    (9) statement -> . if_stmt
    (10) statement -> . while_stmt
    (11) statement -> . return_stmt
    (12) statement -> . function_def_stmt
    (13) statement -> . break_stmt
    (14) statement -> . continue_stmt
    (15) statement -> . foreach_stmt
    (16) statement -> . until_stmt
    (17) statement -> . then_stmt
    (18) statement -> . builtin_function_stmt
    (51) declaration_stmt -> . type_specifier IDENTIFIER EQUALS expression EOL
    (52) declaration_stmt -> . type_specifier IDENTIFIER EQUALS function_call EOL
    (53) declaration_stmt -> . type_specifier IDENTIFIER EQUALS builtin_function_call EOL
    (54) declaration_stmt -> . type_specifier IDENTIFIER EQUALS error EOL
    (62) assignment_stmt -> . IDENTIFIER EQUALS expression EOL
    (63) assignment_stmt -> . IDENTIFIER EQUALS function_call EOL
    (64) assignment_stmt -> . IDENTIFIER EQUALS builtin_function_call EOL
    (65) assignment_stmt -> . IDENTIFIER EQUALS error EOL
    (66) function_call_stmt -> . function_call EOL
    (67) function_call_stmt -> . builtin_function_call EOL
    (75) if_stmt -> . IF LPAREN expression RPAREN block_stmt
    (76) if_stmt -> . IF LPAREN expression RPAREN block_stmt ELSE block_stmt
    (77) if_stmt -> . IF LPAREN error RPAREN block_stmt
    (78) if_stmt -> . IF LPAREN error RPAREN block_stmt ELSE block_stmt
    (79) if_stmt -> . IF LPAREN expression RPAREN error
    (80) if_stmt -> . IF LPAREN expression RPAREN error ELSE block_stmt
    (81) if_stmt -> . IF LPAREN expression RPAREN block_stmt ELSE error
    (82) while_stmt -> . WHILE LPAREN expression RPAREN block_stmt
    (83) while_stmt -> . WHILE LPAREN error RPAREN block_stmt
    (84) while_stmt -> . WHILE LPAREN expression RPAREN error
    (87) return_stmt -> . RETURN expression EOL
    (88) return_stmt -> . RETURN error EOL
    (115) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN block_stmt
    (116) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN error RPAREN block_stmt
    (117) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN error
    (113) break_stmt -> . BREAK EOL
    (114) continue_stmt -> . CONTINUE EOL
    (124) foreach_stmt -> . FOREACH LPAREN IDENTIFIER IN expression RPAREN block_stmt
    (125) foreach_stmt -> . FOREACH LPAREN error RPAREN block_stmt
    (126) foreach_stmt -> . FOREACH LPAREN IDENTIFIER IN expression RPAREN error
    (127) until_stmt -> . UNTIL LPAREN expression RPAREN block_stmt
    (128) until_stmt -> . UNTIL LPAREN error RPAREN block_stmt
    (129) until_stmt -> . UNTIL LPAREN expression RPAREN error
    (130) then_stmt -> . THEN block_stmt
    (131) then_stmt -> . THEN error
    (19) builtin_function_stmt -> . BOOK LPAREN arg_list RPAREN EOL
    (20) builtin_function_stmt -> . CANCEL LPAREN arg_list RPAREN EOL
    (21) builtin_function_stmt -> . LIST_EVENTS LPAREN arg_list RPAREN EOL
    (22) builtin_function_stmt -> . CHECK_AVAILABILITY LPAREN arg_list RPAREN EOL
    (23) builtin_function_stmt -> . MAKE_PAYMENT LPAREN arg_list RPAREN EOL
    (24) builtin_function_stmt -> . REG LPAREN arg_list RPAREN EOL
    (25) builtin_function_stmt -> . DISPLAY LPAREN arg_list RPAREN EOL
    (26) builtin_function_stmt -> . ACCEPT LPAREN arg_list RPAREN EOL
    (27) builtin_function_stmt -> . BOOK LPAREN error RPAREN EOL
    (28) builtin_function_stmt -> . CANCEL LPAREN error RPAREN EOL
    (29) builtin_function_stmt -> . LIST_EVENTS LPAREN error RPAREN EOL
    (30) builtin_function_stmt -> . CHECK_AVAILABILITY LPAREN error RPAREN EOL
    (31) builtin_function_stmt -> . MAKE_PAYMENT LPAREN error RPAREN EOL
    (32) builtin_function_stmt -> . REG LPAREN error RPAREN EOL
    (33) builtin_function_stmt -> . DISPLAY LPAREN error RPAREN EOL
    (34) builtin_function_stmt -> . ACCEPT LPAREN error RPAREN EOL
    (55) type_specifier -> . INT_TYPE
    (56) type_specifier -> . FLOAT_TYPE
    (57) type_specifier -> . STRING_TYPE
    (58) type_specifier -> . BOOL_TYPE
    (59) type_specifier -> . DATE_TYPE
    (60) type_specifier -> . TIME_TYPE
    (61) type_specifier -> . VOID
    (68) function_call -> . IDENTIFIER LPAREN arg_list RPAREN
    (69) function_call -> . IDENTIFIER LPAREN error RPAREN
    (35) builtin_function_call -> . BOOK LPAREN arg_list RPAREN
    (36) builtin_function_call -> . CANCEL LPAREN arg_list RPAREN
    (37) builtin_function_call -> . LIST_EVENTS LPAREN arg_list RPAREN
    (38) builtin_function_call -> . CHECK_AVAILABILITY LPAREN arg_list RPAREN
    (39) builtin_function_call -> . MAKE_PAYMENT LPAREN arg_list RPAREN
    (40) builtin_function_call -> . REG LPAREN arg_list RPAREN
    (41) builtin_function_call -> . DISPLAY LPAREN arg_list RPAREN
    (42) builtin_function_call -> . ACCEPT LPAREN arg_list RPAREN
    (43) builtin_function_call -> . BOOK LPAREN error RPAREN
    (44) builtin_function_call -> . CANCEL LPAREN error RPAREN
    (45) builtin_function_call -> . LIST_EVENTS LPAREN error RPAREN
    (46) builtin_function_call -> . CHECK_AVAILABILITY LPAREN error RPAREN
    (47) builtin_function_call -> . MAKE_PAYMENT LPAREN error RPAREN
    (48) builtin_function_call -> . REG LPAREN error RPAREN
    (49) builtin_function_call -> . DISPLAY LPAREN error RPAREN
    (50) builtin_function_call -> . ACCEPT LPAREN error RPAREN

    error           shift and go to state 3
    IDENTIFIER      shift and go to state 19
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    RETURN          shift and go to state 24
    FUNCTION        shift and go to state 25
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    FOREACH         shift and go to state 28
    UNTIL           shift and go to state 29
    THEN            shift and go to state 30
    BOOK            shift and go to state 31
    CANCEL          shift and go to state 32
    LIST_EVENTS     shift and go to state 33
    CHECK_AVAILABILITY shift and go to state 34
    MAKE_PAYMENT    shift and go to state 35
    REG             shift and go to state 36
    DISPLAY         shift and go to state 37
    ACCEPT          shift and go to state 38
    INT_TYPE        shift and go to state 39
    FLOAT_TYPE      shift and go to state 40
    STRING_TYPE     shift and go to state 41
    BOOL_TYPE       shift and go to state 42
    DATE_TYPE       shift and go to state 43
    TIME_TYPE       shift and go to state 44
    VOID            shift and go to state 45

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 4
    declaration_stmt               shift and go to state 5
    assignment_stmt                shift and go to state 6
    function_call_stmt             shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    function_def_stmt              shift and go to state 11
    break_stmt                     shift and go to state 12
    continue_stmt                  shift and go to state 13
    foreach_stmt                   shift and go to state 14
    until_stmt                     shift and go to state 15
    then_stmt                      shift and go to state 16
    builtin_function_stmt          shift and go to state 17
    type_specifier                 shift and go to state 18
    function_call                  shift and go to state 20
    builtin_function_call          shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (5) statement_list -> statement_list . error EOL
    (6) statement -> . declaration_stmt
    (7) statement -> . assignment_stmt
    (8) statement -> . function_call_stmt
    (9) statement -> . if_stmt
    (10) statement -> . while_stmt
    (11) statement -> . return_stmt
    (12) statement -> . function_def_stmt
    (13) statement -> . break_stmt
    (14) statement -> . continue_stmt
    (15) statement -> . foreach_stmt
    (16) statement -> . until_stmt
    (17) statement -> . then_stmt
    (18) statement -> . builtin_function_stmt
    (51) declaration_stmt -> . type_specifier IDENTIFIER EQUALS expression EOL
    (52) declaration_stmt -> . type_specifier IDENTIFIER EQUALS function_call EOL
    (53) declaration_stmt -> . type_specifier IDENTIFIER EQUALS builtin_function_call EOL
    (54) declaration_stmt -> . type_specifier IDENTIFIER EQUALS error EOL
    (62) assignment_stmt -> . IDENTIFIER EQUALS expression EOL
    (63) assignment_stmt -> . IDENTIFIER EQUALS function_call EOL
    (64) assignment_stmt -> . IDENTIFIER EQUALS builtin_function_call EOL
    (65) assignment_stmt -> . IDENTIFIER EQUALS error EOL
    (66) function_call_stmt -> . function_call EOL
    (67) function_call_stmt -> . builtin_function_call EOL
    (75) if_stmt -> . IF LPAREN expression RPAREN block_stmt
    (76) if_stmt -> . IF LPAREN expression RPAREN block_stmt ELSE block_stmt
    (77) if_stmt -> . IF LPAREN error RPAREN block_stmt
    (78) if_stmt -> . IF LPAREN error RPAREN block_stmt ELSE block_stmt
    (79) if_stmt -> . IF LPAREN expression RPAREN error
    (80) if_stmt -> . IF LPAREN expression RPAREN error ELSE block_stmt
    (81) if_stmt -> . IF LPAREN expression RPAREN block_stmt ELSE error
    (82) while_stmt -> . WHILE LPAREN expression RPAREN block_stmt
    (83) while_stmt -> . WHILE LPAREN error RPAREN block_stmt
    (84) while_stmt -> . WHILE LPAREN expression RPAREN error
    (87) return_stmt -> . RETURN expression EOL
    (88) return_stmt -> . RETURN error EOL
    (115) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN block_stmt
    (116) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN error RPAREN block_stmt
    (117) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN error
    (113) break_stmt -> . BREAK EOL
    (114) continue_stmt -> . CONTINUE EOL
    (124) foreach_stmt -> . FOREACH LPAREN IDENTIFIER IN expression RPAREN block_stmt
    (125) foreach_stmt -> . FOREACH LPAREN error RPAREN block_stmt
    (126) foreach_stmt -> . FOREACH LPAREN IDENTIFIER IN expression RPAREN error
    (127) until_stmt -> . UNTIL LPAREN expression RPAREN block_stmt
    (128) until_stmt -> . UNTIL LPAREN error RPAREN block_stmt
    (129) until_stmt -> . UNTIL LPAREN expression RPAREN error
    (130) then_stmt -> . THEN block_stmt
    (131) then_stmt -> . THEN error
    (19) builtin_function_stmt -> . BOOK LPAREN arg_list RPAREN EOL
    (20) builtin_function_stmt -> . CANCEL LPAREN arg_list RPAREN EOL
    (21) builtin_function_stmt -> . LIST_EVENTS LPAREN arg_list RPAREN EOL
    (22) builtin_function_stmt -> . CHECK_AVAILABILITY LPAREN arg_list RPAREN EOL
    (23) builtin_function_stmt -> . MAKE_PAYMENT LPAREN arg_list RPAREN EOL
    (24) builtin_function_stmt -> . REG LPAREN arg_list RPAREN EOL
    (25) builtin_function_stmt -> . DISPLAY LPAREN arg_list RPAREN EOL
    (26) builtin_function_stmt -> . ACCEPT LPAREN arg_list RPAREN EOL
    (27) builtin_function_stmt -> . BOOK LPAREN error RPAREN EOL
    (28) builtin_function_stmt -> . CANCEL LPAREN error RPAREN EOL
    (29) builtin_function_stmt -> . LIST_EVENTS LPAREN error RPAREN EOL
    (30) builtin_function_stmt -> . CHECK_AVAILABILITY LPAREN error RPAREN EOL
    (31) builtin_function_stmt -> . MAKE_PAYMENT LPAREN error RPAREN EOL
    (32) builtin_function_stmt -> . REG LPAREN error RPAREN EOL
    (33) builtin_function_stmt -> . DISPLAY LPAREN error RPAREN EOL
    (34) builtin_function_stmt -> . ACCEPT LPAREN error RPAREN EOL
    (55) type_specifier -> . INT_TYPE
    (56) type_specifier -> . FLOAT_TYPE
    (57) type_specifier -> . STRING_TYPE
    (58) type_specifier -> . BOOL_TYPE
    (59) type_specifier -> . DATE_TYPE
    (60) type_specifier -> . TIME_TYPE
    (61) type_specifier -> . VOID
    (68) function_call -> . IDENTIFIER LPAREN arg_list RPAREN
    (69) function_call -> . IDENTIFIER LPAREN error RPAREN
    (35) builtin_function_call -> . BOOK LPAREN arg_list RPAREN
    (36) builtin_function_call -> . CANCEL LPAREN arg_list RPAREN
    (37) builtin_function_call -> . LIST_EVENTS LPAREN arg_list RPAREN
    (38) builtin_function_call -> . CHECK_AVAILABILITY LPAREN arg_list RPAREN
    (39) builtin_function_call -> . MAKE_PAYMENT LPAREN arg_list RPAREN
    (40) builtin_function_call -> . REG LPAREN arg_list RPAREN
    (41) builtin_function_call -> . DISPLAY LPAREN arg_list RPAREN
    (42) builtin_function_call -> . ACCEPT LPAREN arg_list RPAREN
    (43) builtin_function_call -> . BOOK LPAREN error RPAREN
    (44) builtin_function_call -> . CANCEL LPAREN error RPAREN
    (45) builtin_function_call -> . LIST_EVENTS LPAREN error RPAREN
    (46) builtin_function_call -> . CHECK_AVAILABILITY LPAREN error RPAREN
    (47) builtin_function_call -> . MAKE_PAYMENT LPAREN error RPAREN
    (48) builtin_function_call -> . REG LPAREN error RPAREN
    (49) builtin_function_call -> . DISPLAY LPAREN error RPAREN
    (50) builtin_function_call -> . ACCEPT LPAREN error RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    error           shift and go to state 47
    IDENTIFIER      shift and go to state 19
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    RETURN          shift and go to state 24
    FUNCTION        shift and go to state 25
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    FOREACH         shift and go to state 28
    UNTIL           shift and go to state 29
    THEN            shift and go to state 30
    BOOK            shift and go to state 31
    CANCEL          shift and go to state 32
    LIST_EVENTS     shift and go to state 33
    CHECK_AVAILABILITY shift and go to state 34
    MAKE_PAYMENT    shift and go to state 35
    REG             shift and go to state 36
    DISPLAY         shift and go to state 37
    ACCEPT          shift and go to state 38
    INT_TYPE        shift and go to state 39
    FLOAT_TYPE      shift and go to state 40
    STRING_TYPE     shift and go to state 41
    BOOL_TYPE       shift and go to state 42
    DATE_TYPE       shift and go to state 43
    TIME_TYPE       shift and go to state 44
    VOID            shift and go to state 45

    statement                      shift and go to state 46
    declaration_stmt               shift and go to state 5
    assignment_stmt                shift and go to state 6
    function_call_stmt             shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    function_def_stmt              shift and go to state 11
    break_stmt                     shift and go to state 12
    continue_stmt                  shift and go to state 13
    foreach_stmt                   shift and go to state 14
    until_stmt                     shift and go to state 15
    then_stmt                      shift and go to state 16
    builtin_function_stmt          shift and go to state 17
    type_specifier                 shift and go to state 18
    function_call                  shift and go to state 20
    builtin_function_call          shift and go to state 21

state 3

    (2) program -> error .

    $end            reduce using rule 2 (program -> error .)


state 4

    (4) statement_list -> statement .

    error           reduce using rule 4 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 4 (statement_list -> statement .)
    IF              reduce using rule 4 (statement_list -> statement .)
    WHILE           reduce using rule 4 (statement_list -> statement .)
    RETURN          reduce using rule 4 (statement_list -> statement .)
    FUNCTION        reduce using rule 4 (statement_list -> statement .)
    BREAK           reduce using rule 4 (statement_list -> statement .)
    CONTINUE        reduce using rule 4 (statement_list -> statement .)
    FOREACH         reduce using rule 4 (statement_list -> statement .)
    UNTIL           reduce using rule 4 (statement_list -> statement .)
    THEN            reduce using rule 4 (statement_list -> statement .)
    BOOK            reduce using rule 4 (statement_list -> statement .)
    CANCEL          reduce using rule 4 (statement_list -> statement .)
    LIST_EVENTS     reduce using rule 4 (statement_list -> statement .)
    CHECK_AVAILABILITY reduce using rule 4 (statement_list -> statement .)
    MAKE_PAYMENT    reduce using rule 4 (statement_list -> statement .)
    REG             reduce using rule 4 (statement_list -> statement .)
    DISPLAY         reduce using rule 4 (statement_list -> statement .)
    ACCEPT          reduce using rule 4 (statement_list -> statement .)
    INT_TYPE        reduce using rule 4 (statement_list -> statement .)
    FLOAT_TYPE      reduce using rule 4 (statement_list -> statement .)
    STRING_TYPE     reduce using rule 4 (statement_list -> statement .)
    BOOL_TYPE       reduce using rule 4 (statement_list -> statement .)
    DATE_TYPE       reduce using rule 4 (statement_list -> statement .)
    TIME_TYPE       reduce using rule 4 (statement_list -> statement .)
    VOID            reduce using rule 4 (statement_list -> statement .)
    $end            reduce using rule 4 (statement_list -> statement .)
    RBRACKET        reduce using rule 4 (statement_list -> statement .)


state 5

    (6) statement -> declaration_stmt .

    error           reduce using rule 6 (statement -> declaration_stmt .)
    IDENTIFIER      reduce using rule 6 (statement -> declaration_stmt .)
    IF              reduce using rule 6 (statement -> declaration_stmt .)
    WHILE           reduce using rule 6 (statement -> declaration_stmt .)
    RETURN          reduce using rule 6 (statement -> declaration_stmt .)
    FUNCTION        reduce using rule 6 (statement -> declaration_stmt .)
    BREAK           reduce using rule 6 (statement -> declaration_stmt .)
    CONTINUE        reduce using rule 6 (statement -> declaration_stmt .)
    FOREACH         reduce using rule 6 (statement -> declaration_stmt .)
    UNTIL           reduce using rule 6 (statement -> declaration_stmt .)
    THEN            reduce using rule 6 (statement -> declaration_stmt .)
    BOOK            reduce using rule 6 (statement -> declaration_stmt .)
    CANCEL          reduce using rule 6 (statement -> declaration_stmt .)
    LIST_EVENTS     reduce using rule 6 (statement -> declaration_stmt .)
    CHECK_AVAILABILITY reduce using rule 6 (statement -> declaration_stmt .)
    MAKE_PAYMENT    reduce using rule 6 (statement -> declaration_stmt .)
    REG             reduce using rule 6 (statement -> declaration_stmt .)
    DISPLAY         reduce using rule 6 (statement -> declaration_stmt .)
    ACCEPT          reduce using rule 6 (statement -> declaration_stmt .)
    INT_TYPE        reduce using rule 6 (statement -> declaration_stmt .)
    FLOAT_TYPE      reduce using rule 6 (statement -> declaration_stmt .)
    STRING_TYPE     reduce using rule 6 (statement -> declaration_stmt .)
    BOOL_TYPE       reduce using rule 6 (statement -> declaration_stmt .)
    DATE_TYPE       reduce using rule 6 (statement -> declaration_stmt .)
    TIME_TYPE       reduce using rule 6 (statement -> declaration_stmt .)
    VOID            reduce using rule 6 (statement -> declaration_stmt .)
    $end            reduce using rule 6 (statement -> declaration_stmt .)
    RBRACKET        reduce using rule 6 (statement -> declaration_stmt .)


state 6

    (7) statement -> assignment_stmt .
